--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>iPhone</title>
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	<div class="root"></div>
-	<script src="./index.js"></script>
+	<div id="root"></div>
+	<script src="scripts/index.js" type="module"></script>
 </body>
 </html>
