--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>iPhone</title>
-	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="src/styles/styles.css">
 </head>
 <body>
 	<div id="root"></div>
-	<script src="scripts/index.js" type="module"></script>
+	<script src="src/scripts/index.js" type="module"></script>
 </body>
 </html>
